# miralis

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE  config.toml  deny.toml  example.config.toml  justfile  linker-script.x  miralis.toml  qemu-riscv64-virt.dtb  readme.md  riscv-unknown-kernel.json  rust-toolchain  visionfive2-fit-image-fast.its  visionfive2-fit-image.its
benchmark-analyzer/: Cargo.toml
benchmark_analyzer/: Cargo.toml
config/: ace-policy.toml  benchmark.toml  example.config.toml  linker-script.x  lock_kernel.toml  performance.toml  premierp550.toml  qemu-keystone.toml  qemu-virt-benchmark.toml  qemu-virt-boot-benchmark.toml  qemu-virt.toml  riscv-unknown-payload.json  setup.gdb  spike.toml  ubuntu.toml  visionfive2-keystone.toml  visionfive2-release-offload.toml  visionfive2-release-protect-payload.toml  visionfive2-release-traps.toml  visionfive2-release.toml  visionfive2.toml
firmware/test_protect_payload_firmware/: Cargo.toml  main.rs
firmware/tracing_firmware/: Cargo.toml  main.rs
model_checking/: Cargo.toml
model_checking/sail_decoder/: Cargo.toml  decoder_illegal.rs  decoder_load.rs  decoder_store.rs  lib.rs
model_checking/sail_decoder_load/: Cargo.toml  lib.rs  readme.md
model_checking/sail_decoder_store/: Cargo.toml  lib.rs
model_checking/sail_model/: Cargo.toml  lib.rs  readme.md
model_checking/sail_model/src/: lib.rs
model_checking/sail_prelude/: Cargo.toml  lib.rs
model_checking/sail_prelude/src/: lib.rs
model_checking/src/: adapters.rs  execute.rs  lib.rs  model.rs  symbolic.rs
runner/: Cargo.toml  readme.md
runner/src/: artifacts.rs  build.rs  config.rs  gdb.rs  logger.rs  main.rs  path.rs  project.rs  run.rs  test.rs  verify.rs
src/: Cargo.toml  arch.rs  benchmark.rs  config.rs  debug.rs  decoder.rs  device.rs  device_tree.rs  driver.rs  emulate.rs  host.rs  lib.rs  logger.rs  main.rs  modules.rs  monitor_switch.rs  payload_trap_handler.rs  precondition.rs  rw_emulation.rs  trap.rs  trap_info.rs  utils.rs  virt.rs
src/ace/: debug.rs  error.rs  mod.rs
src/ace/confidential_flow/: apply_to_confidential_vm.rs  declassify_to_confidential_vm.rs  finite_state_machine.rs
src/ace/confidential_flow/handlers/interrupts/: allow_external_interrupt.rs  expose_enabled_interrupts.rs  handle_interrupt.rs
src/ace/confidential_flow/handlers/mmio/: add_mmio_region.rs  mmio_access_fault.rs  mmio_load_pending.rs  mmio_load_request.rs  mmio_load_response.rs  mmio_store_request.rs  mmio_store_response.rs  mod.rs  remove_mmio_region.rs
src/ace/confidential_flow/handlers/sbi/: invalid_call.rs  request.rs  response.rs
src/ace/confidential_flow/handlers/sbi_base_extension/: extension_probe.rs  get_impl_id.rs  get_impl_version.rs  get_marchid.rs  get_mimpid.rs  get_mvendorid.rs  get_spec_version.rs
src/ace/confidential_flow/handlers/shared_page/: share_page_complete.rs  share_page_request.rs  unshare_page_request.rs
src/ace/confidential_flow/handlers/shutdown/: shutdown_confidential_hart.rs  shutdown_vm.rs
src/ace/confidential_flow/handlers/symmetrical_multiprocessing/: fence_i.rs  hart_resume.rs  hart_start.rs  hart_status.rs  hart_stop.rs  hart_suspend.rs  hfence_gvma_vmid.rs  ipi.rs  no_operation.rs  sfence_vma.rs  sfence_vma_asid.rs
src/ace/confidential_flow/handlers/virtual_instructions/: mod.rs
src/ace/confidential_flow/lightweight_context_switch/: mod.rs
src/ace/core/: mod.rs  panic.rs
src/ace/core/architecture/riscv/: control_status_registers.rs  general_purpose_registers.rs  hart_architectural_state.rs  hart_lifecycle_state.rs  mod.rs  trap_cause.rs
src/ace/core/architecture/riscv/extensions/: compressed_instructions.rs  floating_point_unit.rs  mod.rs  supervisor_timer_extension.rs
src/ace/core/architecture/riscv/iopmp/: mod.rs
src/ace/core/architecture/riscv/mmu/: hgatp.rs  mod.rs  page_size.rs  page_table.rs  page_table_entry.rs  paging_system.rs  shared_page.rs  specification.rs
src/ace/core/architecture/riscv/pmp/: mod.rs
src/ace/core/architecture/riscv/sbi/: mod.rs  nacl_extension.rs
src/ace/core/control_data/: confidential_hart.rs  confidential_hart_remote_command.rs  confidential_vm.rs  confidential_vm_measurement.rs  confidential_vm_mmio_region.rs  hardware_hart.rs  hypervisor_hart.rs  mod.rs  resumable_operation.rs  storage.rs
src/ace/core/hardware_setup/: mod.rs
src/ace/core/heap_allocator/: allocator.rs  mod.rs
src/ace/core/initialization/: mod.rs
src/ace/core/interrupt_controller/: mod.rs
src/ace/core/memory_layout/: confidential_memory_address.rs  mod.rs  non_confidential_memory_address.rs
src/ace/core/memory_protector/: confidential_vm_memory_protector.rs  hypervisor_memory_protector.rs
src/ace/core/page_allocator/: allocator.rs  page.rs
src/ace/non_confidential_flow/: apply_to_hypervisor.rs  declassify_to_hypervisor.rs  finite_state_machine.rs  mod.rs
src/ace/non_confidential_flow/handlers/cove_hypervisor_extension/: destroy_confidential_vm.rs  get_security_monitor_info.rs  promote_to_confidential_vm.rs  run_confidential_hart.rs
src/ace/non_confidential_flow/handlers/nested_acceleration_extension/: nacl_probe_feature.rs  nacl_setup_shared_memory.rs
src/ace/non_confidential_flow/handlers/opensbi/: delegate_to_opensbi.rs  mod.rs  probe_sbi_extension.rs
src/ace/non_confidential_flow/handlers/supervisor_binary_interface/: invalid_call.rs  response.rs
src/ace/non_confidential_flow/lightweight_context_switch/: mod.rs
src/arch/: csrs.rs  host.rs  lib.rs  metal.rs  mod.rs  pmp.rs  pmp_debug.rs  pmp_lib.rs  registers.rs  trap.rs  userspace.rs
src/benchmark/: boot.rs  counter.rs  counter_per_code.rs  counter_per_mcause.rs  default.rs  empty.rs  mod.rs
src/device/: clint.rs  empty.rs  mod.rs  passthrough.rs  plic.rs  tester.rs
src/driver/: clint.rs  mod.rs  plic.rs  uart.rs
src/platform/: miralis.rs  mod.rs  parameters.rs  premierp550.rs  utils.rs  virt.rs  visionfive2.rs
src/policy/: ace.rs  default.rs  keystone.rs  mod.rs  offload.rs  protect_payload.rs  protectpayload.rs
src/virt/: csr.rs  emulator.rs  memory.rs  mod.rs  world_switch.rs
(+199 files in other folders)
