[workspace]
resolver = "2"
members = [
    # The Miralis sources
    "src",

    # Firmware
    "firmware/clint_interrupt",
    "firmware/clint_interrupt_multihart",
    "firmware/clint_interrupt_priority",
    "firmware/csr_ops",
    "firmware/default",
    "firmware/ecall",
    "firmware/hypervisor",
    "firmware/pmp",
    "firmware/breakpoint",
    "firmware/misaligned_op",
    "firmware/mcause",
    "firmware/mret",
    "firmware/os_ctx_switch",
    "firmware/sandbox",
    "firmware/test_protect_payload_firmware",
    "firmware/interrupt",
    "firmware/os_ecall",
    "firmware/device",
    "firmware/tracing_firmware",
    "firmware/vectored_mtvec",
    "firmware/benchmark/ecall_benchmark",
    "firmware/benchmark/csr_write",

    # Payload
    "payload/hello_world",
    "payload/test_protect_payload_payload",
    "payload/test_keystone_payload",

    # Crates
    "crates/abi",
    "crates/core",
    "crates/config_helpers",
    "crates/config_select",
    "crates/flattened_device_tree",
    "crates/pointers_utility",
    "crates/opensbi-sys",
    "crates/test_helpers",

    # Tooling
    "runner",
    "benchmark_analyzer",
]

# Setting the runner as the default member makes it easier to invoke (no need
# for `--package runner`)
default-members = ["runner"]

[workspace.dependencies]
log = "0.4.17"

[profile.dev]
panic = "abort"
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1

