[package]
name = "runner"
version = "0.1.0"
edition = "2021"

license = "MIT"

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
toml = { version = "0.8.10", features = ["default", "preserve_order"] }
indexmap = { version = "2.6.0", features = ["serde"] }
miralis_config = { path = "../crates/config" }
walkdir = "2"
log =  {workspace = true}
