[package]
name = "miralis"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An experimental RISC-V virtual firmawre monitor"
homepage = "https://miralis-firmware.github.io/"
repository = "https://github.com/CharlyCst/miralis"
readme = "../readme.md"
keywords = ["riscv", "virtualization"]
categories = ["no-std", "no-std::no-alloc", "embedded", "virtualization"]

[lib]
name = "miralis"
path = "lib.rs"

[[bin]]
name = "miralis"
path = "main.rs"

[dependencies]
uart_16550 = "0.3.0"
spin = "0.5.2"
log = { workspace = true }
miralis_core = { path = "../crates/core", version = "0.1.0" }
miralis_abi = { path = "../crates/abi", version = "0.1.0" }
config_helpers = { path = "../crates/config_helpers", version = "0.1.0" }
config_select = { path = "../crates/config_select/", version = "0.1.0" }
# This import is only used in the protect payload policy
tiny-keccak = { version = "2.0.0", features = ["sha3"] }

[features]
# When running on host architecture as a userspace application, such as when
# running unit tests.
userspace = []
# Define features for Miralis
release_max_level_trace = ["log/release_max_level_trace"]
release_max_level_debug = ["log/release_max_level_debug"]
release_max_level_info = ["log/release_max_level_info"]
release_max_level_warn = ["log/release_max_level_warn"]
release_max_level_error = ["log/release_max_level_error"]

[lints.clippy]
result_unit_err = "allow"
