[package]
name = "test_protect_payload_firmware"
version = "0.1.0"
edition = "2021"

license = "MIT"

[[bin]]
name = "test_protect_payload_firmware"
path = "main.rs"

[lints]
workspace = true

[dependencies]
miralis_abi = { path = "../../crates/abi" }
miralis_config = { path = "../../crates/config" }
